👣🐾 Checkpoint ./.glitch-assets:9318777/2003 ./assets/css/main.css:9318777/464 ./index.html:9318777/107

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2600,7 +2600,7 @@
 /* One */
 
 	#one:before {
-		background-image: url("../../images/banner.jpg");
+		background-image: url("https://cdn.glitch.com/4f21be4b-5129-48b1-b0aa-fcd34590f40c%2Fbanner2.jpg?v=1576124521229");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: cover;
